# quiet-for-codex

./: .gitattributes  CHANGELOG.md  FORK_CHANGES.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-request.yml
.github/actions/setup-rusty-v8/: action.yml
.github/workflows/: quiet-ci.yml  quiet-release.yml
codex-rs/.cargo/: config.toml
codex-rs/app-server/: README.md
codex-rs/app-server-daemon/src/: lib.rs
codex-rs/app-server/src/: request_processors.rs
codex-rs/chatgpt/src/: chatgpt_client.rs  connectors.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: doctor.rs  login.rs  main.rs  marketplace_cmd.rs  mcp_cmd.rs  plugin_cmd.rs  sandbox_setup.rs  state_db_recovery.rs
codex-rs/cli/tests/: features.rs  mcp_list.rs  update.rs
codex-rs/feedback/: Cargo.toml
codex-rs/feedback/src/: lib.rs
codex-rs/tui/: tooltips.txt
docs/: CLA.md  contributing.md  install.md  license.md
scripts/ci/: check_embedded_skill_identity.py  check_quiet_rustfmt.py  run_quiet_tui_tests.sh  rustfmt.toml
scripts/codex_package/: rg  test_ripgrep.py
scripts/release/: about.hbs  about.toml  finalize_quiet_package.py  generate_v8_notices.py  install.ps1  install.sh  no-zsh.json  prepare_v8_artifacts.py  smoke_quiet_package.py  test_finalize_quiet_package.py  test_generate_v8_notices.py  test_install_ps1.ps1  test_install_sh.py  test_prepare_v8_artifacts.py  test_release_workflow.py  test_smoke_quiet_package.py  v8-notices-manifest.json
(+298 files in other folders)
