[package]
name = "codex-feedback"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-login = { workspace = true }
codex-protocol = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
mime_guess = { workspace = true }
pretty_assertions = { workspace = true }
sentry = { version = "0.46" }

[lib]
doctest = false
